--- a/Redaction/Rapport_Final/Rapport.Rmd
+++ b/Redaction/Rapport_Final/Rapport.Rmd
@@ -103,7 +103,7 @@ C'est cette approche que nous étudions dans ce projet et dans la suite de ce ra
 \emph{Source : \cite{Mikolov}}
 \end{figure}
 
-Pour transformer chaque mot en un vecteur, au lieu de simplement compter les fréquences d’apparition des mots contextes voisins d’un mot focus^[Comme dans les premiers modèles sémantiques dits *sparses*.], nous entraînons un réseau de neurones sur une tâche annexe : on construit un classifieur dont la tâche de prédiction est binaire et répond à la question (dans le cas Skip-Gram) « Est-ce que ce mot contexte est susceptible d’être voisin du mot focus ? ».
+Pour transformer chaque mot en un vecteur, au lieu de simplement compter les fréquences d’apparition des mots contextes voisins d’un mot focus^[Comme dans les premiers modèles sémantiques dits *sparses*.], nous entraînons un réseau de neurones sur une tâche annexe : on construit un classifieur dont la tâche de prédiction est binaire pour chacun des mots du vocabulaire et répond à la question (dans le cas Skip-Gram) « Est-ce que ce mot contexte est susceptible d’être voisin du mot focus ? ».
 La prédiction en elle-même ne nous intéresse pas, c’est plutôt le poids du classifieur en sortie du modèle qui correspondra aux *word-embeddings*. 
 
 Les voisins d’un mot focus reposent sur un hyperparamètre : la fenêtre (*window* ou $w$). 
@@ -181,26 +181,26 @@ Le modèle *Word2vec* a initialement été construit en utilisant une fonction d
 
 #### Version softmax {#subsec:softmax}
 
-Soit $w_1,\,\dots,\,w_T$ les mots utilisés pour entraîner le modèle. L'objectif du modèle Skip-Gram est, étant donné un mot contexte, de prévoir quels sont les mots voisins focus dans une certaine fenêtre $w$. Mathématiquement, on cherche à maximiser la quantité :
+Soit $w_1,\,\dots,\,w_T$ les mots utilisés pour entraîner le modèle. L'objectif du modèle Skip-Gram est, étant donné un mot focus, de prévoir quels sont les mots voisins contextes dans une certaine fenêtre $w$. Mathématiquement, on cherche à maximiser la quantité :
 \begin{equation}
 \frac 1 T\sum_{t=1}^T\sum_{-w\leq j \leq w,\,j\ne 0} \log \mathbb P(w_{t+j}\vert w_{t})
 (\#eq:objSoftMax)
 \end{equation}
 où :
 
-- les $w_{t+j}$ sont les mots voisins de $w_t$ ($w_t$ est donc un mot contexte et $w_{t+j}$ un mot focus) ; 
+- les $w_{t+j}$ sont les mots voisins de $w_t$ ($w_t$ est donc un mot focus et $w_{t+j}$ un mot contexte) ; 
 
--  $\mathbb P(w_{t+j}\vert w_{t})$ est la probabilité d'observer le mot focus $w_{t+j}$ sachant que l'on a observé le mot contexte $w_t$.
+-  $\mathbb P(w_{t+j}\vert w_{t})$ est la probabilité d'observer le mot contexte $w_{t+j}$ sachant que l'on a observé le mot focus $w_t$.
 Cette quantité est calculée en fonction des matrices $W_e$ et $W_s$ à partir de la fonction softmax
 ^[Étant donné le vecteur $z=(z_1,\,\dots,\,z_n)$) la fonction softmax est la fonction qui à $z$ associe le vecteur dont la $j$^ème^ coordonnée est égale à $\frac{\exp(z_j)}{\sum_{i=1}^n\exp(z_i)}$.]. En notant $n$ la taille du vocabulaire et $W_{e,w_i}$ et $W_{s,w_i}$ les représentations vectorielles du mot $w_i$ respectivement dans la matrice d'entrée et de sortie, cette probabilité est égale à^[
 Dans tout le rapport nous utiliserons la notation $^{t}X$ pour désigner la transposée de la matrice $X$.
 ] :
 $$
-\mathbb P(w_{focus}\vert w_{context}) = 
+\mathbb P(w_{contexte}\vert w_{focus}) = 
 \frac{
-\exp(W_{s,w_{focus}}\times {}^tW_{e,w_{contexte}})
+\exp(W_{e,w_{focus}}\times {}^tW_{s,w_{contexte}})
 }{
-\sum_{i=1}^n\exp(W_{s,w_i}\times {}^tW_{e,w_{contexte}})
+\sum_{i=1}^n\exp(W_{e,w_{focus}}\times {}^tW_{s,w_{i}})
 }
 $$
 
@@ -208,15 +208,15 @@ Maximiser l'équation \@ref(eq:objSoftMax) revient à minimiser la fonction de p
 
 
 $$
-Loss_{1}=-\log\mathbb P(w_{focus}\vert w_{context}) =
--W_{s,w_{focus}}\times {}^tW_{e,w_{contexte}}+
-\log\left(\sum_{i=1}^n\exp(W_{s,w_i}\times {}^tW_{e,w_{contexte}})\right)
+Loss_{1}=-\log\mathbb P(w_{contexte}\vert w_{focus}) =
+-W_{e,w_{focus}}\times {}^tW_{s,w_{contexte}}+
+\log\left(\sum_{i=1}^n\exp(W_{e,w_{focus}}\times {}^t W_{s,w_i})\right)
 $$
 L'inconvénient de cette méthode est qu'elle est très gourmande en temps de calcul. 
-En effet, pour chaque couple `[focus, contexte]`, la complexité du calcul de $\log\mathbb P(w_{focus}\vert w_{context})$ est proportionnelle à la taille du vocabulaire.
+En effet, pour chaque couple `[focus, contexte]`, la complexité du calcul de $\log\mathbb P(w_{contexte}\vert w_{focus})$ est proportionnelle à la taille du vocabulaire.
 La taille du vocabulaire pouvant être très grande (par exemple, dans notre base de tweets, cette taille est de 70 330), le temps de calcul peut vite devenir très important. 
 
-<!-- - La complexité du calcul de $\nabla_\theta \log\mathbb P(w_{focus}\vert w_{context})$ dans l'étape de descente de gradient est aussi proportionnelle à la taille du vocabulaire. \colorbox{BurntOrange}{à conserver ? Alain} -->
+<!-- - La complexité du calcul de $\nabla_\theta \log\mathbb P(w_{contexte}\vert w_{focus})$ dans l'étape de descente de gradient est aussi proportionnelle à la taille du vocabulaire. \colorbox{BurntOrange}{à conserver ? Alain} -->
 
 C'est pourquoi la version *softmax* est très peu utilisée dans les implémentations de Skip-Gram. Une approche alternative, *negative sampling* avec une fonction sigmoïde, moins gourmande en temps de calcul, est alors souvent préférée^[
 Une autre alternative à l'approche *softmax* parfois utilisée est l'approche *hierarchical softmax* qui se base sur l'utilisation d'arbres binaires de classification. La complexité de cet algorithme est proportionnelle à $\log_2n$ mais reste plus importante que celle de l'approche *negative sampling*.
@@ -239,7 +239,7 @@ Dans cette approche, plutôt que de mettre à jour l'ensemble des représentatio
 Il est bien sûr possible que parmi les mots tirés au hasard il y ait des mots qui soient vraiment dans le contexte. Cependant, puisque la taille du vocabulaire est très grande, on considère que cette erreur est négligeable.
 ]. 
 
-L'approche *softmax* peut être vue comme un problème de classification multiclasses : étant donné un mot `contexte`, on estime la probabilité que les autres mots soient parmi ses voisins (chaque classe étant un mot du vocabulaire).
+L'approche *softmax* peut être vue comme un problème de classification multiclasses : étant donné un mot `focus`, on estime la probabilité que les autres mots soient parmi ses voisins (chaque classe étant un mot du vocabulaire).
 L'idée du *negative sampling* est de transformer ce problème de classification multiclasses en un problème de classification binaire d'une variable $D$ : pour chaque couple `[focus, mot2]`, on cherche à déterminer si `mot2` est dans le contexte de `focus`. Si c'est le cas, alors $D=1$ (mot2 est positif et est le `contexte`), sinon $D=0$ (mot2 est négatif, il appartient à $(w_{neg,\,i})_{i=1..K}$). 
 
 <!-- Predicting the next word is like predicting the class. That is, such a network is just a "standard" multinomial (multi-class) classifier. And this network must have as many output neurons as classes there are. When classes are actual words, the number of neurons is, well, huge. -->
@@ -255,9 +255,9 @@ $$
 \mathbb P(D=0\vert w_{focus},w_{neg,\,i})=\sigma(-W_{e,w_{focus}}{}^tW_{s,w_{neg,\,i}}) = 
 \frac{1}{1+\exp(W_{e,w_{focus}}{}^tW_{s,w_{neg,\,i}})}
 $$
-Par rapport à l'approche *softmax*, on cherche toujours à maximiser la quantité de l'équation \@ref(eq:objSoftMax) mais en estimant $\log\mathbb P(w_{focus}\vert w_{context})$ par :
+Par rapport à l'approche *softmax*, on cherche toujours à maximiser la quantité de l'équation \@ref(eq:objSoftMax) mais en estimant $\log\mathbb P(w_{contexte}\vert w_{focus})$ par :
 $$
-\log\mathbb P(w_{focus}\vert w_{context}) =
+\log\mathbb P(w_{contexte}\vert w_{focus}) =
 \log\underbrace{\sigma (W_{e,w_{focus}}{}^tW_{s,w_{contexte}})}_{
 \mathbb P(D=1\vert w_{focus},w_{contexte})
 }+
@@ -743,6 +743,27 @@ Une dernière façon de vérifier la qualité de nos vecteurs-mots est de les co
 Elle contient 65 paires de noms communs (tableau \ref{table:human_judgement}) évaluées sur une échelle de 0 (non liés) à 4 (très liés).
 
 
+Nous calculons ensuite la corrélation de Spearman entre les similarités cosinus de ces différentes paires issues de notre modèle (notées ici $(X_i)_{i=1..n}$) et les scores proposés ci-dessus par des êtres humains (notés ici $(Y_i)_{i=1..n}$).
+
+La corrélation de Spearman est égale au coefficient de corrélation de Pearson calculé sur les variables de rang. 
+$$
+r_s = \mathrm{corr}(\mathrm{rg}_X, \mathrm{rg}_Y) = 
+\frac{\mathrm{cov}(\mathrm{rg}_X, \mathrm{rg}_Y)}{
+\sigma_{\mathrm{rg}_X} \sigma_{\mathrm{rg}_Y}
+}
+$$
+La variable de rang $\mathrm{rg}_{X_i}$ est définie telle que $\mathrm{rg}_{X_i}=j \iff X_i = X_{(j)}$ ($X_i$ est la $j$ème plus petite variable). 
+
+Pour tester la significativité de ce coefficient, nous utilisons la loi sous $(H_0)$ de la statistique de test $z = \arctanh(r_s) =  \frac{1}{2} \ln\frac{1+r}{1-r} \overset{H_0}{\sim}\mathcal{N}(0, \frac{1}{n-3})$ et obtenons l'intervalle de confiance suivant :
+
+$$
+IC_\alpha (r_s) = \left[\tanh\left(z-\frac{q_{1-\frac{\alpha}{2}}}{\sqrt{n-3}}\right),
+\tanh\left(z+\frac{q_{1-\frac{\alpha}{2}}}{\sqrt{n-3}}\right)\right]
+$$
+avec $q_{1-\frac{\alpha}{2}}$ le quantile d'ordre $1-\frac{\alpha}{2}$ d'une loi $\mathcal{N}(0, 1)$.
+
+
+
 \begin{table}
 \begin{center}
 \begin{tabular}{|c|c|c|}
@@ -764,26 +785,6 @@ Elle contient 65 paires de noms communs (tableau \ref{table:human_judgement}) é
 \end{table}
 
 
-
-
-Nous calculons ensuite la corrélation de Spearman entre les similarités cosinus de ces différentes paires issues de notre modèle (notées ici $(X_i)_{i=1..n}$) et les scores proposés ci-dessus par des êtres humains (notés ici $(Y_i)_{i=1..n}$).
-
-La corrélation de Spearman est égale au coefficient de corrélation de Pearson calculé sur les variables de rang. 
-$$
-r_s = \mathrm{corr}(\mathrm{rg}_X, \mathrm{rg}_Y) = 
-\frac{\mathrm{cov}(\mathrm{rg}_X, \mathrm{rg}_Y)}{
-\sigma_{\mathrm{rg}_X} \sigma_{\mathrm{rg}_Y}
-}
-$$
-La variable de rang $\mathrm{rg}_{X_i}$ est définie telle que $\mathrm{rg}_{X_i}=j \iff X_i = X_{(j)}$ ($X_i$ est la $j$ème plus petite variable). 
-
-Pour tester la significativité de ce coefficient, nous utilisons la loi sous $(H_0)$ de la statistique de test $z = \arctanh(r_s) =  \frac{1}{2} \ln\frac{1+r}{1-r} \overset{H_0}{\sim}\mathcal{N}(0, \frac{1}{n-3})$ et obtenons l'intervalle de confiance suivant :
-
-$$
-IC_\alpha (r_s) = \left[\tanh\left(z-\frac{q_{1-\frac{\alpha}{2}}}{\sqrt{n-3}}\right),
-\tanh\left(z+\frac{q_{1-\frac{\alpha}{2}}}{\sqrt{n-3}}\right)\right]
-$$
-avec $q_{1-\frac{\alpha}{2}}$ le quantile d'ordre $1-\frac{\alpha}{2}$ d'une loi $\mathcal{N}(0, 1)$.
 
 \newpage
 
